--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>NicoJS</title><link rel="stylesheets" href="static/css/global.css"><script src="static/js/global.js"></script></head><body><p class="test"></p></body></html>
+<!DOCTYPE html><html><head><title>NicoJS</title><script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script><script src="https://cdn.socket.io/socket.io-1.3.5.js"></script><script src="scripts/base.js"></script><link rel="stylesheets" href="static/css/global.css"></head><body><div id="container"></div></body></html>
